--- a/_posts/2015-01-01-主题预览.md
+++ b/_posts/2015-01-01-主题预览.md
@@ -69,29 +69,28 @@ _斜体_
 ## 列表
 
 - 无序列表 1-1
-
+  
   缩进 2 空格
-
+  
   - 缩进 2 空格
   - 缩进 2 空格
-
   1. 缩进 2 空格
   2. 缩进 2 空格
 
 - 无序列表 1-2
+
 - 无序列表 1-3
-
 1. 有序列表 1-1
-
+   
    缩进 3 空格
-
+   
    1. 缩进 3 空格
    2. 缩进 3 空格
-
    - 无序列表
    - 无序列表
 
 2. 有序列表 1-2
+
 3. 有序列表 1-3
 
 ```
@@ -135,6 +134,10 @@ _斜体_
 
 块级别图片
 
+```html
+
+```
+
 ```md
 ![测试图片](001.jpg)
 ```
@@ -161,7 +164,7 @@ blog.encodeHtml = function (html) {
 }
 ```
 
-````
+```
 ```javascript
 blog.encodeHtml = function(html) {
 var o = document.createElement('div')
@@ -171,15 +174,15 @@ o = null
 return temp
 }
 ```
-````
+```
 
 ## 表格测试
 
-| Tables        |      Are      |   Cool |
-| ------------- | :-----------: | -----: |
+| Tables        | Are           | Cool   |
+| ------------- |:-------------:| ------:|
 | col 3 is      | right-aligned | \$1600 |
-| col 2 is      |   centered    |   \$12 |
-| zebra stripes |   are neat    |    \$1 |
+| col 2 is      | centered      | \$12   |
+| zebra stripes | are neat      | \$1    |
 
 ```md
 | Tables        |      Are      |   Cool |
